@@ -124,12 +124,6 @@
      />
 
   <adapter
-     factory="Products.CMFCore.exportimport.content.StructureFolderWalkingAdapter"
-     provides="Products.GenericSetup.interfaces.IFilesystemImporter"
-     for="Products.ATContentTypes.interface.IATContentType"
-     />
-
-  <adapter
      factory=".propertiestool.SimpleItemWithPropertiesXMLAdapter"
      provides="Products.GenericSetup.interfaces.IBody"
      for="Products.CMFCore.interfaces.IMemberDataTool
@@ -141,25 +135,6 @@
      provides="Products.GenericSetup.interfaces.IBody"
      for="Products.CMFPlone.interfaces.IControlPanel
           Products.GenericSetup.interfaces.ISetupEnviron"
-     />
-
-  <!-- Mark ATCT objects as IDAVAware so CMFSetup can export/import them -->
-  <five:implements
-     class="Products.ATContentTypes.content.document.ATDocument"
-     interface="Products.GenericSetup.interfaces.IDAVAware"
-     />
-
-  <!-- XXX: Temporarily disable ATTopic exporting until we have an
-       actual exporter or Marshaller -->
-  <five:implements
-     class="Products.ATContentTypes.content.topic.ATTopic"
-     interface="Products.CMFPlone.exportimport.content.IDisabledExport"
-     />
-
-  <adapter
-     factory=".content.NullExporterAdapter"
-     provides="Products.GenericSetup.interfaces.IFilesystemExporter"
-     for="Products.CMFPlone.exportimport.content.IDisabledExport"
      />
 
 </configure>
