@@ -1,10 +1,5 @@
 <?xml version="1.0"?>
 <export-steps>
- <export-step id="atcttool"
-              handler="Products.ATContentTypes.exportimport.atcttool.exportATCTTool"
-              title="ATContentTypes Tool">
-  Export ATContentTypes specific configuration.
- </export-step>
  <export-step id="content"
               handler="Products.CMFCore.exportimport.content.exportSiteStructure"
               title="Content">
