@@ -12,6 +12,9 @@ Changelog
   actually make PTS' language negotiator available to the zope.i18n machinery.
   [hannosch]
 
+- Moved ATCT specific exportimport code into the ATCT package itself.
+  [hannosch]
+
 - Made sure the plone.indexer registration works by introducing a more
   specific IPloneCatalogTool marker interface and registering the indexable
   object wrapper for this.
